feature: transfer responsibility

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -255,6 +255,15 @@ permissions_table_edit_btn,Bearbeiten,Edit,
 permissions_table_remove_subject_btn,Berechtigung entfernen,Remove Permissions,
 permissions_table_save_btn,Speichern,Save,
 permissions_table_title,Berechtigungen,Permissions,
+permissions_transfer_responsibility_link,Verantwortung übertragen,Verantwortung übertragen,
+transfer_responsibility_title,Verantwortlichkeit auf folgende Person übertragen,Verantwortlichkeit auf folgende Person übertragen,
+transfer_responsibility_person_will_receive,Die vorherige verantwortliche Person erhält folgende Berechtigungen,Die vorherige verantwortliche Person erhält folgende Berechtigungen,
+transfer_responsibility_permission_view,Betrachten,Betrachten,
+transfer_responsibility_permission_download,Herunterladen,Herunterladen,
+transfer_responsibility_permission_edit,Editieren,Editieren,
+transfer_responsibility_permission_manage,Verwalten,Verwalten,
+transfer_responsibility_submit,Übertragen,Übertragen,
+transfer_responsibility_cancel,Abbrechen,Abbrechen,
 picture_alt_fallback,(unbekannt),(unkown),
 picture_alt_prefix,Bild: ,Picture:,
 relations_parents_title,Übergeordnete Sets,Parents,
@@ -303,6 +312,8 @@ resources_box_batch_actions_menu_title,Aktionen,Actions,
 resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
 resources_box_batch_actions_save,Als Filterset speichern,Save as filter set,
 resources_box_batch_actions_sets_managepermissions,Berechtigungen von Sets editieren,Edit Permissions for collections,
+resources_box_batch_actions_transfer_responsibility_entries,Verantwortung von Medieneinträgen übertragen,Verantwortung von Medieneinträgen übertragen,
+resources_box_batch_actions_transfer_responsibility_sets,Verantwortung von Sets übertragen,Verantwortung von Sets übertragen,
 resources_box_title_count_post,Inhalte,Items,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
@@ -412,3 +423,10 @@ custom_urls_flash_transfer_confirmation_media_entry_3," zugewiesen. Wollen Sie d
 custom_urls_flash_transfer_confirmation_media_entry_4," übertragen?"," übertragen?",
 custom_urls_flash_primary_url_set_1,,,
 custom_urls_flash_primary_url_set_2," wurde als Primäre Adresse gesetzt."," wurde als Primäre Adresse gesetzt.",
+ajax_form_connection_error,Connection error. Please try again.,Connection error. Please try again.,
+ajax_form_successful_but_unparsable,Request successful but cannot parse answer.,Request successful but cannot parse answer.,
+ajax_form_validation_error_unparsable,Validation error with unparsable errors.,Validation error with unparsable errors.,
+ajax_form_validation_error_without_any_data,Validation error without any data.,Validation error without any data.,
+ajax_form_validation_error_without_error_data,Validation error without error data.,Validation error without error data.,
+ajax_form_no_longer_authorized,You are no longer authorized to do this.,You are no longer authorized to do this.,
+ajax_form_unexpected_error,There was an unexpected server error.,There was an unexpected server error.,
