--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -273,7 +273,7 @@ resource_action_destroy,Medieneintrag löschen,Delete media entry,
 resource_action_disfavor,Aus Favoriten entfernen,Remove from favorites,
 resource_action_edit_cover,Titelbild festlegen,Define cover,
 resource_action_edit_highlights,Inhalte hervorheben,Highlight contents,
-resource_action_edit_custom_urls,Sprechende Adressesn,Sprechende Adressen,
+resource_action_edit_custom_urls,Sprechende Adressen,Sprechende Adressen,
 resource_action_edit,Editieren,Edit,
 resource_action_export,Exportieren,Download,
 resource_action_favor,Zu Favoriten hinzufügen,Add to favorites,
