--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -257,13 +257,20 @@ permissions_table_save_btn,Speichern,Save,
 permissions_table_title,Berechtigungen,Permissions,
 permissions_transfer_responsibility_link,Verantwortung übertragen,Verantwortung übertragen,
 transfer_responsibility_title,Verantwortlichkeit auf folgende Person übertragen,Verantwortlichkeit auf folgende Person übertragen,
-transfer_responsibility_person_will_receive,Die vorherige verantwortliche Person erhält folgende Berechtigungen,Die vorherige verantwortliche Person erhält folgende Berechtigungen,
-transfer_responsibility_permission_view,Betrachten,Betrachten,
-transfer_responsibility_permission_download,Herunterladen,Herunterladen,
-transfer_responsibility_permission_edit,Editieren,Editieren,
-transfer_responsibility_permission_manage,Verwalten,Verwalten,
+transfer_responsibility_person_will_receive_1,"Sie, ","Sie, ",
+transfer_responsibility_person_will_receive_2,", behalten folgende Berechtigungen:",", behalten folgende Berechtigungen:",
 transfer_responsibility_submit,Übertragen,Übertragen,
 transfer_responsibility_cancel,Abbrechen,Abbrechen,
+transfer_responsibility_success_media_entry,Sie haben die Verantwortlichkeit für den Medieneintrag erflogreich übertragen.,Sie haben die Verantwortlichkeit für den Medieneintrag erflogreich übertragen.,
+transfer_responsibility_success_collection,Sie haben die Verantwortlichkeit für das Set erflogreich übertragen.,Sie haben die Verantwortlichkeit für das Set erflogreich übertragen.,
+transfer_responsibility_batch_success_media_entry_1,Sie haben für ,Sie haben für ,
+transfer_responsibility_batch_success_media_entry_1a, Medieneintrag ,
+transfer_responsibility_batch_success_media_entry_1b, Medieneinträge,
+transfer_responsibility_batch_success_media_entry_2, die Verantwortlichkeit erfolgreich übertragen., Medieneinträge die Verantwortlichkeit erfolgreich übertragen.,
+transfer_responsibility_batch_success_collection_1,Sie haben für ,Sie haben für ,
+transfer_responsibility_batch_success_collection_1a, Set , Set ,
+transfer_responsibility_batch_success_collection_1b, Sets , Sets ,
+transfer_responsibility_batch_success_collection_2, die Verantwortlichkeit erfolgreich übertragen., Sets die Verantwortlichkeit erfolgreich übertragen.,
 picture_alt_fallback,(unbekannt),(unkown),
 picture_alt_prefix,Bild: ,Picture:,
 relations_parents_title,Übergeordnete Sets,Parents,
@@ -312,8 +319,8 @@ resources_box_batch_actions_menu_title,Aktionen,Actions,
 resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
 resources_box_batch_actions_save,Als Filterset speichern,Save as filter set,
 resources_box_batch_actions_sets_managepermissions,Berechtigungen von Sets editieren,Edit Permissions for collections,
-resources_box_batch_actions_transfer_responsibility_entries,Verantwortung von Medieneinträgen übertragen,Verantwortung von Medieneinträgen übertragen,
-resources_box_batch_actions_transfer_responsibility_sets,Verantwortung von Sets übertragen,Verantwortung von Sets übertragen,
+resources_box_batch_actions_transfer_responsibility_entries,Verantwortlichkeit von Medieneinträgen übertragen,Verantwortlichkeit von Medieneinträgen übertragen,
+resources_box_batch_actions_transfer_responsibility_sets,Verantwortlichkeit von Sets übertragen,Verantwortlichkeit von Sets übertragen,
 resources_box_title_count_post,Inhalte,Items,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
