--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -255,14 +255,14 @@ permissions_table_edit_btn,Bearbeiten,Edit,
 permissions_table_remove_subject_btn,Berechtigung entfernen,Remove Permissions,
 permissions_table_save_btn,Speichern,Save,
 permissions_table_title,Berechtigungen,Permissions,
-permissions_transfer_responsibility_link,Verantwortung übertragen,Verantwortung übertragen,
+permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Verantwortlichkeit übertragen,
 transfer_responsibility_title,Verantwortlichkeit auf folgende Person übertragen,Verantwortlichkeit auf folgende Person übertragen,
 transfer_responsibility_person_will_receive_1,"Sie, ","Sie, ",
 transfer_responsibility_person_will_receive_2,", behalten folgende Berechtigungen:",", behalten folgende Berechtigungen:",
 transfer_responsibility_submit,Übertragen,Übertragen,
 transfer_responsibility_cancel,Abbrechen,Abbrechen,
-transfer_responsibility_success_media_entry,Sie haben die Verantwortlichkeit für den Medieneintrag erflogreich übertragen.,Sie haben die Verantwortlichkeit für den Medieneintrag erflogreich übertragen.,
-transfer_responsibility_success_collection,Sie haben die Verantwortlichkeit für das Set erflogreich übertragen.,Sie haben die Verantwortlichkeit für das Set erflogreich übertragen.,
+transfer_responsibility_success_media_entry,Sie haben die Verantwortlichkeit für den Medieneintrag erfolgreich übertragen.,Sie haben die Verantwortlichkeit für den Medieneintrag erfolgreich übertragen.,
+transfer_responsibility_success_collection,Sie haben die Verantwortlichkeit für das Set erfolgreich übertragen.,Sie haben die Verantwortlichkeit für das Set erfolgreich übertragen.,
 transfer_responsibility_batch_success_media_entry_1,Sie haben für ,Sie haben für ,
 transfer_responsibility_batch_success_media_entry_1a, Medieneintrag ,
 transfer_responsibility_batch_success_media_entry_1b, Medieneinträge,
