fix: only show vocab keywords if content available

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -363,6 +363,7 @@ vocabularies_tabs_vocabulary,Vokabular,Vocabulary,
 vocabularies_tabs_contents,Inhalte,Contents,
 vocabularies_contents_hint_1,"Alle Inhalte mit Metadaten des Vokabulars ","Alle Inhalte mit Metadaten des Vokabulars ",
 vocabularies_contents_hint_2,". Sie sehen nur Inhalte, für die Sie berechtigt sind.",". Sie sehen nur Inhalte, für die Sie berechtigt sind.",
+vocabularies_no_keywords,Keine Schlagworte vorhanden.,Keine Schlagworte vorhanden.,
 workgroup_link_to_contents_text,Inhalte,Contents,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View contents of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
