feature: split more_data into more_data and usage_data

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -163,12 +163,20 @@ media_entry_more_data_title,Verantwortlichkeit und Aktivität,Responsibility,
 media_entry_not_published_warning_msg,Diesem Medieneintrag fehlen noch Pflichtangaben!,Media entry still needs mandatory data!,
 media_entry_select_collection_flash_result,Der Medieneintrag wurde aus %{removed_count} Set(s) entfernt und zu %{added_count} Set(s) hinzugefügt.,Removed media entry from %{removed_count} set(s). Added media entry to %{added_count} set(s).,TODO_cleanup_interpolation
 media_entry_tab_main,Medieneintrag,Media Entry,
-media_entry_tab_more_data,Alle Daten,All Data,
+media_entry_tab_usage_data,Nutzung,Nutzung,
+media_entry_tab_more_data,Alle Metadaten,All Metadata,
 media_entry_tab_permissions,Berechtigungen,Permissions,
 media_entry_tab_relations,Zusammenhänge,Relations,
 media_entry_upload_btn,Importieren,Upload,
 media_entry_was_disfavored,Der Medieneintrag wurde von den Favoriten entfernt.,Media entry was removed from favorites.,
 media_entry_was_favored,Der Medieneintrag wurde zu den Favoriten hinzugefügt.,Media entry was added to favorites.,
+usage_data_responsibility_title,Verantwortlichkeit und Aktivitäten,Verantwortlichkeit und Aktivitäten,
+usage_data_responsible,Verantwortlich im Medienarchiv,Verantwortlich im Medienarchiv,
+usage_data_import_by,Importiert durch,Importiert durch,
+usage_data_import_at,Importiert am,Importiert am,
+usage_data_created_at,Erstellt am,Erstellt am,
+usage_data_last_changes_title,Letzte Änderungen der Metadaten,Letzte Änderungen der Metadaten,
+usage_data_last_changes_empty,Es wurden noch keine Änderungen festgehalten.,No changes recorded yet.,
 meta_data_action_delete_btn,Löschen,Delete,
 meta_data_action_edit_btn,Bearbeiten,Edit,
 meta_data_batch_failure,Metadaten konnten nicht aktualisiert werden.,Metadata could not be updated.,
@@ -288,8 +296,6 @@ resource_action_manage_collections,Zu Sets hinzufügen/Aus Sets entfernen,Add to
 resource_ask_delete_cancel,Abbrechen,Cancel,
 resource_ask_delete_ok,Löschen,Delete,
 resource_ask_delete_question_post,?,?,
-resource_last_changes_empty,Es wurden noch keine Änderungen festgehalten.,No changes recorded yet.,
-resource_last_changes,Letzte Änderungen,Last Changes,
 resource_meta_data_copyright_notice,Rechte am geistigen Eigentum,Copyright notice,
 resource_meta_data_date,Datierung,Date,
 resource_meta_data_description,Beschreibung,Description,
