fix: meta data listing layout and texts

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -122,7 +122,7 @@ login_box_login_btn,Anmelden,Log In,
 login_box_password,Passwort,Password,
 login_box_rememberme,Login merken,remember me,
 login_box_username,Benutzername,Username,
-media_entry_all_metadata_title,Alle MetaDaten nach Vokabularen,All Metadata by Vocabulary,
+media_entry_all_metadata_title,Alle Metadaten nach Vokabularen,All Metadata by Vocabulary,
 media_entry_ask_delete_question_pre,"Sind Sie sicher, dass Sie folgenden Medienintrag löschen möchten: ",Are you sure that you want to delete the following media entry:,
 media_entry_ask_delete_title,Medieneintrag löschen,Delete Media Entry,
 media_entry_back_btn,Zurück,Back,
