fix: permissions layout and labels

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -323,7 +323,8 @@ permissions_table_cancel_btn,Abbrechen,Cancel,
 permissions_table_edit_btn,Bearbeiten,Edit,
 permissions_table_remove_subject_btn,Berechtigung entfernen,Remove Permissions,
 permissions_table_save_btn,Speichern,Save,
-permissions_table_title,Berechtigungen,Permissions,
+permissions_responsibility_title,Verantwortlichkeit,Verantwortlichkeit,
+permissions_table_title,Zugriffsberechtigungen,Zugriffsberechtigungen,
 permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Verantwortlichkeit übertragen,
 picture_alt_fallback,(unbekannt),(unkown),
 picture_alt_prefix,Bild: ,Picture:,
