--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -446,7 +446,8 @@ vocabularies_no_keywords,Keine Schlagworte vorhanden.,Keine Schlagworte vorhande
 vocabularies_tabs_contents,Inhalte,Contents,
 vocabularies_tabs_keywords,Schlagwörter,Keywords,
 vocabularies_tabs_permissions,Berechtigungen,Permissions,
-vocabulary_permissions_hint,"Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn sie Mitglied einer berechtigten Arbeitsgruppe sind, können sie Personen zu dieser hinzufügen. Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden sie sich an den Support.",,
+vocabulary_permissions_hint1,"Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn Sie Mitglied einer berechtigten Arbeitsgruppe sind, können Sie Personen zu dieser hinzufügen.","Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn Sie Mitglied einer berechtigten Arbeitsgruppe sind, können Sie Personen zu dieser hinzufügen.",
+vocabulary_permissions_hint2,"Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden Sie sich an den Support.","Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden Sie sich an den Support.",
 vocabularies_tabs_vocabulary,Vokabular,Vocabulary,
 workgroup_link_to_contents_text,Inhalte,Contents,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View contents of this work group,
