feature: add relation counts to usage data

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -425,6 +425,9 @@ usage_data_import_by,Importiert durch,Importiert durch,
 usage_data_last_changes_empty,Es wurden noch keine Änderungen festgehalten.,No changes recorded yet.,
 usage_data_last_changes_title,Letzte Änderungen der Metadaten,Letzte Änderungen der Metadaten,
 usage_data_responsibility_title,Verantwortlichkeit und Aktivitäten,Verantwortlichkeit und Aktivitäten,
+usage_data_relations_title,Zusammenhänge,Zusammenhänge,
+usage_data_relations_parents,Übergeordnete Sets,Übergeordnete Sets,
+usage_data_relations_children,Set enthält,Set enthält,
 usage_data_responsible,Verantwortlich im Medienarchiv,Verantwortlich im Medienarchiv,
 usage_terms_accept_btn,Nutzungsbedingungen akzeptieren,Accept usage terms,
 usage_terms_reject_btn,Ablehnen,Reject usage terms,
