feature: clipboard collection

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -367,6 +367,10 @@ resource_select_collection_save,Speichern,Save,
 resource_select_collection_search_placeholder,Suche,Search,
 resource_select_collection_search,Suchen,Search,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
+resources_box_batch_actions_addalltoclipboard,Alle zu Zwischenablage hinzufügen,Alle zu Zwischenablage hinzufügen ,
+resources_box_batch_actions_removeallfromclipboard,Alle aus Zwischenablage entfernen,Alle aus Zwischenablage entfernen,
+resources_box_batch_actions_addselectedtoclipboard,Ausgewählte zu Zwischenablage hinzufügen,Add selected to Clipboard,
+resources_box_batch_actions_removefromclipboard,Ausgewählte aus Zwischenablage entfernen,Remove selected from Clipboard,
 resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
 resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
 resources_box_batch_actions_edit_sets,Metadaten von Sets editieren,Edit MetaData for sets,
@@ -381,6 +385,16 @@ resources_box_batch_actions_transfer_responsibility_sets,Verantwortlichkeit von 
 resources_box_title_count_post,Inhalte,Items,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
+clipboard_batch_add_success,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,
+clipboard_batch_remove_success,Die Inhalte wurden aus der Stapelverarbeitung entfernt.,Die Inhalte wurden aus der Stapelverarbeitung entfernt.,
+clipboard_add_hint,Zur Stapelverarbeitung hinzufügen,Zur Stapelverarbeitung hinzufügen,
+clipboard_fetching_resources,Lade Inhalte...,Lade Inhalte...,
+clipboard_adding_resources,Füge Inhalte zur Stapelverarbeitung hinzu...,Füge Inhalte zur Stapelverarbeitung hinzu...,
+clipboard_removing_resources,Entferne Inhalte aus Stapelverarbeitung...,Entferne Inhalte aus Stapelverarbeitung...,
+clipboard_ask_add_all_1,Möchten sie alle ,Möchten Sie alle ,
+clipboard_ask_add_all_2, Inhalte zur Stapelverarbeitung hinzufügen?, Inhalte zur Stapelverarbeitung hinzufügen?,
+clipboard_ask_add_all_ok,Ok,Ok,
+clipboard_ask_add_all_cancel,Abbrechen,Abbrechen,
 sitemap_api,API,API,
 sitemap_collections,Sets,Sets,
 sitemap_entries,Medieneinträge,Media Entries,
@@ -404,6 +418,7 @@ sitemap_my_unpublished,Meine Entwürfe,My drafts,
 sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
 sitemap_vocabularies,Vokabulare,Vocabularies,
+sitemap_clipboard,Stapelverarbeitung,Stapelverarbeitung,
 transfer_responsibility_batch_success_collection_1,Sie haben für ,Sie haben für ,
 transfer_responsibility_batch_success_collection_1a, Set , Set ,
 transfer_responsibility_batch_success_collection_1b, Sets , Sets ,
