fix: clipboard: dashboard section, wording

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -367,10 +367,10 @@ resource_select_collection_save,Speichern,Save,
 resource_select_collection_search_placeholder,Suche,Search,
 resource_select_collection_search,Suchen,Search,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
-resources_box_batch_actions_addalltoclipboard,Alle zu Zwischenablage hinzufügen,Alle zu Zwischenablage hinzufügen ,
-resources_box_batch_actions_removeallfromclipboard,Alle aus Zwischenablage entfernen,Alle aus Zwischenablage entfernen,
-resources_box_batch_actions_addselectedtoclipboard,Ausgewählte zu Zwischenablage hinzufügen,Add selected to Clipboard,
-resources_box_batch_actions_removefromclipboard,Ausgewählte aus Zwischenablage entfernen,Remove selected from Clipboard,
+resources_box_batch_actions_addalltoclipboard,Alle zur Stapelverarbeitung hinzufügen,Add all to Clipboard,
+resources_box_batch_actions_removeallfromclipboard,Alle aus der Stapelverarbeitung entfernen,Remove all from Clipboard,
+resources_box_batch_actions_addselectedtoclipboard,Ausgewählte zur Stapelverarbeitung hinzufügen,Add selected to Clipboard,
+resources_box_batch_actions_removefromclipboard,Ausgewählte aus der Stapelverarbeitung entfernen,Remove selected from Clipboard,
 resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
 resources_box_batch_actions_delete,Ausgewählte löschen,Delete selected,
 resources_box_batch_actions_edit_sets,Metadaten von Sets editieren,Edit MetaData for sets,
