feature: batch delete resources

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -22,6 +22,11 @@ batch_remove_from_collection_question_part_2, Medieneinträge und , media entrie
 batch_remove_from_collection_question_part_3, Sets aus dem Set entfernen?, sets from this set?,
 batch_remove_from_collection_remove,Entfernen,Remove,
 batch_remove_from_collection_title,Medieinträge/Sets aus Set entfernen,Remove media entries/sets from sets,
+batch_destroy_resources_ask_1,Möchten Sie alle ,Möchten Sie alle ,
+batch_destroy_resources_ask_2, ausgewählten Inhalte unwiderruflich löschen?, ausgewählten Inhalte unwiderruflich löschen?,
+batch_destroy_resources_ok,Ok,Ok,
+batch_destroy_resources_cancel,Abbrechen,Abbrechen,
+batch_destroy_resources_success,Inhalte wurden erfolgreich gelöscht.,Inhalte wurden erfolgreich gelöscht.,
 btn_delete_confirm_msq,"Sind Sie sicher, dass Sie diesen Inhalt löschen wollen?",Are you sure you want to delete this item?,
 btn_delete_text,Löschen,Delete,
 btn_publish_confirm_msg,"Sind Sie sicher, dass Sie diesen Inhalt sichern wollen?",Are you sure you want to publish this item?,
