fix: batch delete texts and icon

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -22,8 +22,10 @@ batch_remove_from_collection_question_part_2, Medieneinträge und , media entrie
 batch_remove_from_collection_question_part_3, Sets aus dem Set entfernen?, sets from this set?,
 batch_remove_from_collection_remove,Entfernen,Remove,
 batch_remove_from_collection_title,Medieinträge/Sets aus Set entfernen,Remove media entries/sets from sets,
-batch_destroy_resources_ask_1,Möchten Sie alle ,Möchten Sie alle ,
-batch_destroy_resources_ask_2, ausgewählten Inhalte unwiderruflich löschen?, ausgewählten Inhalte unwiderruflich löschen?,
+batch_destroy_resources_ask_1,Möchten Sie folgende Inhalte löschen:,Möchten Sie folgende Inhalte löschen:,
+batch_destroy_resources_ask_2, Einträge, Einträge,
+batch_destroy_resources_ask_3, Sets, Sets,
+batch_destroy_resources_ask_4,(Einträge in Sets werden nicht automatisch mit dem Set gelöscht),(Einträge in Sets werden nicht automatisch mit dem Set gelöscht),
 batch_destroy_resources_ok,Ok,Ok,
 batch_destroy_resources_cancel,Abbrechen,Abbrechen,
 batch_destroy_resources_success,Inhalte wurden erfolgreich gelöscht.,Inhalte wurden erfolgreich gelöscht.,
