fix: ui: VocabularyKeywords: correct label for order

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -295,6 +295,10 @@ meta_data_input_new_person_toggle,Neue Person oder Gruppe anlegen,Add new Person
 meta_data_meta_key_label,Schlüssel,Key,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Value,
+meta_key_order_alphabetical,a-z,a-z,
+meta_key_order_alphabetical_hint,Die Schlagworte dieses MetaKeys sind alphabetisch sortiert,The Keywords of this MetaKey are alphabetically sorted ,
+meta_key_order_custom,redaktionell,editorial,
+meta_key_order_custom_hint,Die Schlagworte dieses MetaKeys sind redaktionell sortiert,The Keywords of this MetaKey are editorially sorted ,
 no_content_fallback,Keine Inhalte vorhanden.,No content available.,
 no_groups_fallback,Keine Arbeitsgruppen vorhanden.,No groups available.,
 no_keywords_fallback,Keine Schlagworte vorhanden.,No keywords available.,
