feat: configure login providers

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -188,6 +188,7 @@ internal_groups,Arbeitsgruppen,Work groups,
 login_provider_zhdk_title,ZHdK-Login,ZHdK Login,
 login_provider_zhdk_hint,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,For using of all function and access to more content.,
 login_box_internal,Externe,External,
+login_box_internal_only,Login,Login,
 login_box_login_btn,Anmelden,Log In,
 login_box_password,Passwort,Password,
 login_box_rememberme,Login merken,remember me,
