refactor: login_providers config

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -185,9 +185,8 @@ group_toolbar_header_entrusted_resources,Mir anvertraute Medieneinträge,Entrust
 group_was_deleted,Arbeitsgruppe wurde gelöscht.,Work group has been deleted.,
 home_page_new_contents,Neue Inhalte,New Contents,
 internal_groups,Arbeitsgruppen,Work groups,
-login_box_external,ZHdK-Login,ZHdK Login,
-login_box_hint_first_line,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,For using of all function and access to more content.,
-login_box_hint_second_line, ,,
+login_provider_zhdk_title,ZHdK-Login,ZHdK Login,
+login_provider_zhdk_hint,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,For using of all function and access to more content.,
 login_box_internal,Externe,External,
 login_box_login_btn,Anmelden,Log In,
 login_box_password,Passwort,Password,
