--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -378,8 +378,10 @@ resource_select_collection_save,Speichern,Save,
 resource_select_collection_search_placeholder,Suche,Search,
 resource_select_collection_search,Suchen,Search,
 resource_select_collection_title,Zu Set hinzufügen/entfernen,Add to/remove from set,
-resources_box_batch_actions_addalltoclipboard,Alle zur Stapelverarbeitung hinzufügen,Add all to Clipboard,
-resources_box_batch_actions_removeallfromclipboard,Alle aus der Stapelverarbeitung entfernen,Remove all from Clipboard,
+resources_box_batch_actions_addalltoclipboard_1,Alle ,Add all ,
+resources_box_batch_actions_addalltoclipboard_2, zur Stapelverarbeitung hinzufügen, to Clipboard,
+resources_box_batch_actions_removeallfromclipboard_1,Alle ,Remove all ,
+resources_box_batch_actions_removeallfromclipboard_2, aus der Stapelverarbeitung entfernen, from Clipboard,
 resources_box_batch_actions_addselectedtoclipboard,Ausgewählte zur Stapelverarbeitung hinzufügen,Add selected to Clipboard,
 resources_box_batch_actions_removefromclipboard,Ausgewählte aus der Stapelverarbeitung entfernen,Remove selected from Clipboard,
 resources_box_batch_actions_addtoset,Ausgewählte zu Set hinzufügen,Add selected to Set,
