feat: view for vocabulary keyword terms

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -416,6 +416,8 @@ sitemap_entries,Medieneinträge,Media Entries,
 sitemap_explore,Erkunden,Explore,
 sitemap_filter_sets,Filtersets,Filter sets,
 sitemap_help,Support,Support,
+sitemap_metakey,Metakey,MetaKey,
+sitemap_metakey_id,Metakey-ID,MetaKey-ID,
 sitemap_media_entries,Medieneinträge,Media Entries,
 sitemap_my_archive,Mein Archiv,My archive,
 sitemap_my_content_collections,Meine Sets,My sets,
@@ -432,6 +434,7 @@ sitemap_my_latest_imports,Meine letzten Importe,My latest uploads,
 sitemap_my_unpublished,Meine Entwürfe,My drafts,
 sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
+sitemap_vocabulary,Vokabular,Vocabulary,
 sitemap_vocabularies,Vokabulare,Vocabularies,
 sitemap_clipboard,Stapelverarbeitung,Stapelverarbeitung,
 transfer_responsibility_batch_success_collection_1,Sie haben für ,Sie haben für ,
@@ -479,6 +482,8 @@ vocabularies_tabs_permissions,Berechtigungen,Permissions,
 vocabulary_permissions_hint1,"Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn Sie Mitglied einer berechtigten Arbeitsgruppe sind, können Sie Personen zu dieser hinzufügen.","Für dieses Vokabular sind die Berechtigungen "Betrachten" und "Anwenden" vergeben. Wenn Sie Mitglied einer berechtigten Arbeitsgruppe sind, können Sie Personen zu dieser hinzufügen.",
 vocabulary_permissions_hint2,"Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden Sie sich an den Support.","Weitere Berechtigungen für Personen, Arbeitsgruppen, API-Applikationen oder die Öffentlichkeit werden durch den Administrator vergeben – bitte wenden Sie sich an den Support.",
 vocabularies_tabs_vocabulary,Vokabular,Vocabulary,
+vocabulary_term_info_term,Term,Term
+vocabulary_term_info_contents,Inhalte,Contents
 workgroup_link_to_contents_text,Inhalte,Contents,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,View contents of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
