--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -186,9 +186,9 @@ group_was_deleted,Arbeitsgruppe wurde gelöscht.,Work group has been deleted.,
 home_page_new_contents,Neue Inhalte,New Contents,
 internal_groups,Arbeitsgruppen,Work groups,
 login_provider_zhdk_title,ZHdK-Login,ZHdK Login,
-login_provider_zhdk_hint,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,For using of all function and access to more content.,
-login_provider_aai_title,Login,Login,
-login_provider_aai_hint,Anmelden mit Switch AAI.,Login with Switch AAI.,
+login_provider_zhdk_hint,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,Log In to use all features and access more content.,
+login_provider_aai_title,AAI-Login,AAI-Login,
+login_provider_aai_hint,Alle Funktionen nutzen und auf mehr Inhalte zugreifen.,Log In to use all features and access more content.,
 login_box_internal,Externe,External,
 login_box_internal_only,Login,Login,
 login_box_login_btn,Anmelden,Log In,
