feature: add content to clipboard in chunks

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -405,6 +405,9 @@ clipboard_batch_remove_success,Die Inhalte wurden aus der Stapelverarbeitung ent
 clipboard_add_hint,Zur Stapelverarbeitung hinzufügen,Zur Stapelverarbeitung hinzufügen,
 clipboard_fetching_resources,Lade Inhalte...,Lade Inhalte...,
 clipboard_adding_resources,Füge Inhalte zur Stapelverarbeitung hinzu...,Füge Inhalte zur Stapelverarbeitung hinzu...,
+clipboard_adding_all_resources_error,Es konnten nicht alle Inhalte zur Stapelverarbeitung hinzugefügt werden. Bitte versuchen Sie es noch einmal. Schon hinzugefügte Inhalte werden nicht dupliziert.,Es konnten nicht alle Inhalte zur Stapelverarbeitung hinzugefügt werden. Bitte versuchen Sie es noch einmal. Schon hinzugefügte Inhalte werden nicht dupliziert.,
+clipboard_adding_all_resources_cancelled,"Das Hinzufügen zur Stapelverarbeitung wurde abgebrochen. Ein Teil der Inhalte wurde schon hinzugefügt. Wenn Sie alle hinzufügen möchten, versuchen Sie es noch einmal. Schon hinzugefügte Inhalte werden nicht dupliziert.","Das Hinzufügen zur Stapelverarbeitung wurde abgebrochen. Ein Teil der Inhalte wurde schon hinzugefügt. Wenn Sie alle hinzufügen möchten, versuchen Sie es noch einmal. Schon hinzugefügte Inhalte werden nicht dupliziert.",
+clipboard_adding_all_resources_retry,Nochmals, Nochmals,
 clipboard_removing_resources,Entferne Inhalte aus Stapelverarbeitung...,Entferne Inhalte aus Stapelverarbeitung...,
 clipboard_ask_add_all_1,Möchten sie alle ,Möchten Sie alle ,
 clipboard_ask_add_all_2, Inhalte zur Stapelverarbeitung hinzufügen?, Inhalte zur Stapelverarbeitung hinzufügen?,
