--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -222,7 +222,7 @@ media_entry_file_format_not_supported_1,"Your browser does most likely not suppo
 media_entry_file_format_not_supported_2,download the file,download the file,
 media_entry_file_format_not_supported_3,.,.,
 media_entry_file_information_title,Datei,File Information,
-media_entry_media_import_gotodrafts,Gehe zu Entwürfen,Go to Drafts,
+media_entry_media_import_gotodrafts,Vervollständige Medieneinträge,Vervollständige Medieneinträge,
 media_entry_media_import_header,Medien importieren,Media upload,
 media_entry_media_import_inside_nojs,Dateien auswählen,Select Files,
 media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder,Drag & drop files here or,
@@ -434,7 +434,7 @@ sitemap_my_favorite_filter_sets,Meine Favoriten (Filtersets),My favorites (filte
 sitemap_my_favorite_media_entries,Meine Favoriten (Medieneinträge),My favorites (media entries),
 sitemap_my_groups,Meine Arbeitsgruppen,My work groups,
 sitemap_my_latest_imports,Meine letzten Importe,My latest uploads,
-sitemap_my_unpublished,Meine Entwürfe,My drafts,
+sitemap_my_unpublished,Unvollständige Medieneinträge,Unvollständige Medieneinträge,
 sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
 sitemap_vocabulary,Vokabular,Vocabulary,
