fix: add clipboard to user menu

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -434,6 +434,7 @@ sitemap_my_favorite_media_entries,Meine Favoriten (Medieneinträge),My favorites
 sitemap_my_groups,Meine Arbeitsgruppen,My work groups,
 sitemap_my_latest_imports,Meine letzten Importe,My latest uploads,
 sitemap_my_unpublished,Unvollständige Medieneinträge,Unvollständige Medieneinträge,
+sitemap_my_clipboard,Stapelverarbeitung,Stapelverarbeitung,
 sitemap_my_used_keywords,Meine Schlagworte,My keywords,
 sitemap_search,Suche,Search,
 sitemap_vocabulary,Vokabular,Vocabulary,
