feature: if entries result is empty use set fallback if only search filter or no filters used

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -396,6 +396,10 @@ resources_box_batch_actions_save,Als Filterset speichern,Save as filter set,
 resources_box_batch_actions_sets_managepermissions,Berechtigungen von Sets editieren,Edit Permissions for collections,
 resources_box_batch_actions_transfer_responsibility_entries,Verantwortlichkeit von Medieneinträgen übertragen,Verantwortlichkeit von Medieneinträgen übertragen,
 resources_box_batch_actions_transfer_responsibility_sets,Verantwortlichkeit von Sets übertragen,Verantwortlichkeit von Sets übertragen,
+resources_box_no_content,Keine Inhalte verfügbar,Keine Inhalte verfügbar,
+resources_box_no_content_but_sets_1,Es gibt keine Medieneinträge für diese Suche. Es wurden aber ,Es gibt keine Medieneinträge für diese Suche. Es wurden aber ,
+resources_box_no_content_but_sets_2,Sets,Sets,
+resources_box_no_content_but_sets_3, gefunden., gefunden.,
 resources_box_title_count_post,Inhalte,Items,
 resources_header_show_all,alle anzeigen,show all,
 search_btn_search,Suchen,Search,
