feature: group show should only show one box like the other show pages

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -183,6 +183,7 @@ group_new_form_title,Neue Arbeitsgruppe erstellen,Create Group,
 group_new_group_btn,Neue Arbeitsgruppe,New Work Group,
 group_toolbar_header_entrusted_resources,Mir anvertraute Medieneinträge,Entrusted Media Entries,
 group_was_deleted,Arbeitsgruppe wurde gelöscht.,Work group has been deleted.,
+group_show_edit_button,Arbeitsgruppe bearbeiten,Arbeitsgruppe bearbeiten,
 home_page_new_contents,Neue Inhalte,New Contents,
 internal_groups,Arbeitsgruppen,Work groups,
 login_provider_zhdk_title,ZHdK-Login,ZHdK Login,
