perf: my/dashboard: static sidebar nav
dynamic "by content count" nav is too expensive

also some cleanup and better test for empty clipboard (is not show in menu anymore)

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -407,6 +407,7 @@ search_btn_search,Suchen,Search,
 clipboard_batch_add_success,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,Die Inhalte wurden der Stapelverarbeitung hinzugefügt.,
 clipboard_batch_remove_success,Die Inhalte wurden aus der Stapelverarbeitung entfernt.,Die Inhalte wurden aus der Stapelverarbeitung entfernt.,
 clipboard_add_hint,Zur Stapelverarbeitung hinzufügen,Zur Stapelverarbeitung hinzufügen,
+clipboard_empty_message,Sie haben keine Inhalte für die Stapelverarbeitung ausgewählt.,Clipboard is empty,
 clipboard_fetching_resources,Lade Inhalte...,Lade Inhalte...,
 clipboard_adding_resources,Füge Inhalte zur Stapelverarbeitung hinzu...,Füge Inhalte zur Stapelverarbeitung hinzu...,
 clipboard_adding_all_resources_error,Es konnten nicht alle Inhalte zur Stapelverarbeitung hinzugefügt werden. Bitte versuchen Sie es noch einmal. Schon hinzugefügte Inhalte werden nicht dupliziert.,Es konnten nicht alle Inhalte zur Stapelverarbeitung hinzugefügt werden. Bitte versuchen Sie es noch einmal. Schon hinzugefügte Inhalte werden nicht dupliziert.,
