feature: vocabulary permissions and member list for group show

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -182,6 +182,11 @@ group_edit_person,Person,Person,
 group_edit_save,Speichern,Save,
 group_edit_username,Benutzername,Username,
 group_meta_data_institutional_group_name,Name der Abteilungsgruppe,Division group name,
+group_show_members,Mitglieder,Mitglieder,
+group_show_vocabulary_permissions,Berechtigungen Vokabulare,Berechtigungen Vokabulare,
+group_show_permissions_view_use,(betrachten und anwenden),(betrachten und anwenden),
+group_show_permissions_view,(betrachten),(betrachten),
+group_show_permissions_use,(anwenden),(anwenden),
 group_meta_data_name,Name,Name,
 group_new_form_title,Neue Arbeitsgruppe erstellen,Create Group,
 group_new_group_btn,Neue Arbeitsgruppe,New Work Group,
