fix: wording and separators on dashboard

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -437,24 +437,29 @@ sitemap_metakey,Metakey,MetaKey,
 sitemap_metakey_id,Metakey-ID,MetaKey-ID,
 sitemap_media_entries,Medieneinträge,Media Entries,
 sitemap_my_archive,Mein Archiv,My archive,
-sitemap_my_content_collections,Meine Sets,My sets,
-sitemap_my_content_filter_sets,Meine Filtersets,My filter sets,
-sitemap_my_content_media_entries,Meine Medieneinträge,My media entries,
+sitemap_my_content_collections,Sets,Sets,
+sitemap_my_content_filter_sets,Filtersets,Filter sets,
+sitemap_my_content_media_entries,Medieneinträge,Media entries,
 sitemap_my_entrusted_collections,Mir anvertraute Sets,My entrusted sets,
 sitemap_my_entrusted_filter_sets,Mir anvertraute Filtersets,My entrusted filter sets,
 sitemap_my_entrusted_media_entries,Mir anvertraute Medieneinträge,My entrusted media entries,
-sitemap_my_favorite_collections,Meine Favoriten (Sets),My favorites (sets),
-sitemap_my_favorite_filter_sets,Meine Favoriten (Filtersets),My favorites (filter sets),
-sitemap_my_favorite_media_entries,Meine Favoriten (Medieneinträge),My favorites (media entries),
-sitemap_my_groups,Meine Arbeitsgruppen,My work groups,
-sitemap_my_latest_imports,Meine letzten Importe,My latest uploads,
+sitemap_my_favorite_collections,Favoriten - Sets,Favorites - sets,
+sitemap_my_favorite_filter_sets,Favoriten - Filtersets,Favorites - filter sets,
+sitemap_my_favorite_media_entries,Favoriten - Medieneinträge,Favorites - media entries,
+sitemap_my_groups,Arbeitsgruppen,Work groups,
+sitemap_my_latest_imports,Letzte Importe,Latest uploads,
 sitemap_my_unpublished,Unvollständige Medieneinträge,Unvollständige Medieneinträge,
 sitemap_my_clipboard,Stapelverarbeitung,Stapelverarbeitung,
-sitemap_my_used_keywords,Meine Schlagworte,My keywords,
+sitemap_my_used_keywords,Schlagworte,Keywords,
 sitemap_search,Suche,Search,
 sitemap_vocabulary,Vokabular,Vocabulary,
 sitemap_vocabularies,Vokabulare,Vocabularies,
 sitemap_clipboard,Stapelverarbeitung,Stapelverarbeitung,
+user_menu_my_content_collections,Meine Sets,My sets,
+user_menu_my_content_media_entries,Meine Medieneinträge,My media entries,
+user_menu_my_favorite_collections,Meine Favoriten - Sets,My favorites - sets,
+user_menu_my_favorite_media_entries,Meine Favoriten - Medieneinträge,My favorites - media entries,
+user_menu_my_groups,Meine Arbeitsgruppen,My work groups,
 transfer_responsibility_batch_success_collection_1,Sie haben für ,Sie haben für ,
 transfer_responsibility_batch_success_collection_1a, Set , Set ,
 transfer_responsibility_batch_success_collection_1b, Sets , Sets ,
