feature: share modal and view

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -161,6 +161,16 @@ dashboard_create_collection,Set erstellen,Create set,
 dashboard_create_media_entry_btn,Medien importieren,Upload Media,
 dashboard_title_head,Mein Archiv,My Archive,
 dashboard_welcome_msg,Willkommen im Medienarchiv der Künste!,Welcome to Madek!,
+share_title_media_entry,Medieneintrag teilen,Medieneintrag teilen,
+share_title_collection,Set teilen,Set teilen,
+share_uuid_url_subtitle,URL teilen,URL teilen,
+share_uuid_url_hint,"Wenn Sie explizit diesen Medieneintrag / dieses Set teilen möchten, nutzen Sie folgende URL.","Wenn Sie explizit diesen Medieneintrag / dieses Set teilen möchten, nutzen Sie folgende URL."
+share_custom_url_subtitle,Sprechende Adresse teilen,Sprechende Adresse teilen,
+share_custom_url_hint,"Wenn Sie eine sprechende Adresse nutzen oder unter einem Link wechselnde Medieneinträge/Sets teilen möchten (z.B. .../roberts_neueste_arbeiten), dann verwenden Sie folgende URL.","Wenn Sie eine sprechende Adresse nutzen oder unter einem Link wechselnde Medieneinträge/Sets teilen möchten (z.B. .../roberts_neueste_arbeiten), dann verwenden Sie folgende URL.",
+share_custom_url_none_available,Es ist keine sprechende Adresse angelegt.,Es ist keine sprechende Adresse angelegt.,
+share_back_to_collection,Zurück zum Set,Zurück zum Set,
+share_back_to_media_entry,Zurück zum Medieneintrag,Zurück zum Medieneintrag,
+share_close,Schliessen,Close,
 edit_custom_urls_back_to_collection,Zurück zum Set,Zurück zum Set,
 edit_custom_urls_back_to_media_entry,Zurück zum Medieneintrag,Zurück zum Medieneintrag,
 edit_custom_urls_cancel,Abbrechen,Abbrechen,
@@ -383,6 +393,7 @@ resource_action_edit,Editieren,Edit,
 resource_action_export,Exportieren,Download,
 resource_action_favor,Zu Favoriten hinzufügen,Add to favorites,
 resource_action_manage_collections,Zu Sets hinzufügen/Aus Sets entfernen,Add to/Remove from sets,
+resource_action_share,Teilen,Share,
 resource_ask_delete_cancel,Abbrechen,Cancel,
 resource_ask_delete_ok,Löschen,Delete,
 resource_ask_delete_question_post,?,?,
